--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -14,8 +14,10 @@
     <br>
     <a th:href="@{/show_simple_form}">Работа с простой формой</a>
     <br>
-    <a th:href="@{/show_mod_form}">Работа с MOD формой</a>
+    <a th:href="@{/find_form}">Работа с MOD формой</a>
     <br>
-    <a th:href="@{/students/show_form}">Работа с формой для студентов</a>
+    <a th:href="@{/products/show_form}">Работа с формой для товаров</a>
+    <br>
+    <a th:href="@{/products/show}">Показать все товары</a>
 </body>
 </html>
