--- a/src/main/webapp/WEB-INF/templates/simple_form.html
+++ b/src/main/webapp/WEB-INF/templates/simple_form.html
@@ -11,7 +11,7 @@
     <h1>Simple Form</h1>
 
     <form th:action="@{/simple_form_processing}" method="GET">
-        <input type="text" name="studentName" placeholder="Введите имя студента"/>
+        <input type="text" name="productTitle" placeholder="Введите наименование товара"/>
         <input type="submit"/>
     </form>
     <br>
