--- a/src/main/webapp/WEB-INF/templates/simple_form_result.html
+++ b/src/main/webapp/WEB-INF/templates/simple_form_result.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Simple Form Result</h1>
     <br>
-    <span th:text="'Имя студента: ' + ${param.studentName}" />
+    <span th:text="'Наименование товара: ' + ${param.productTitle}" />
     <br>
     <a th:href="@{/}">на Главную страницу</a>
 </body>
