--- a/src/main/webapp/WEB-INF/templates/mod_form.html
+++ b/src/main/webapp/WEB-INF/templates/mod_form.html
@@ -10,8 +10,13 @@
 <body>
     <h1>Mod Form</h1>
 
-    <form th:action="@{/mod_form_processing}" method="GET">
-        <input type="text" name="studentName" placeholder="Введите имя студента"/>
+    <form th:action="@{/mod_form_processing}" th:object="${id}" method="POST">
+        <input type="text" name="productId" placeholder="Введите id товара"/>
+        <br>
+        <input type="text" name="productTitle" placeholder="Введите название товара"/>
+        <br>
+        <input type="text" name="productPrice" placeholder="Введите цену товара"/>
+        <br>
         <input type="submit"/>
     </form>
     <br>
